# ImageBuffer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: colors.cpp  colors.h  example.cpp  image_files.cpp  image_files.h  imagebuffer.cpp  imagebuffer.h  raw_image_data.h
